# timetabling-solvers

./: README.md
chr/: CMakeLists.txt  cp_int.cpp  cp_int.h  debug.h  instanceparser.cpp  instanceparser.h  main.cpp  timetabling.chrpp
mzn/: log.mzn  output.mzn  tt.mzn  tt_arrays.mzn  tt_assertions.mzn  tt_bounds.mzn  tt_constraints.mzn  tt_cost.mzn  tt_extension.mzn  tt_extension_pregenerated.mzn  tt_functions.mzn  tt_intension.mzn  tt_log.mzn  tt_model_output.mzn  tt_padding.mzn  tt_predicates.mzn  tt_ranges.mzn  tt_resolution.mzn  tt_rules_bounds.mzn  tt_rules_predicates.mzn  tt_rules_ranges.mzn  tt_rules_solver.mzn  tt_solution.mzn  tt_solution_output.mzn  tt_solution_output_extension.mzn  tt_solve.mzn  tt_utils.mzn  tt_variables.mzn  utils.mzn
mzn/utt_predicates/: allocate_slot.mzn  allocation_group_flex.mzn  allocation_room_size.mzn  allocation_teacher_option.mzn  assign_room.mzn  assign_teacher.mzn  at_most_daily.mzn  at_most_weekly.mzn  connected_rooms.mzn  course_no_overlap_two_day.mzn  disjunctive_group.mzn  disjunctive_room.mzn  disjunctive_teacher.mzn  domain_class_groups.mzn  domain_class_room.mzn  domain_session_teacher.mzn  forbidden_slots.mzn  implicite_sequenced_sessions.mzn  not_consecutive_rooms.mzn  part_schedule.mzn  room_size_valide.mzn  same_dailyslot.mzn  same_day.mzn  same_rooms.mzn  same_slots.mzn  same_teachers.mzn  same_week.mzn  same_weekly_day.mzn  same_weelyslot.mzn  sequenced.mzn  teacher_hours.mzn  teacher_repartition.mzn  weekly.mzn
